--- a/example/anim.css
+++ b/example/anim.css
@@ -4,26 +4,11 @@ html, body {
     height: 100%;
 }
 
-.pt-perspective {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	perspective: 1200px;
-	transform-style: preserve-3d;
+.items {
+    min-height: 250px;
+    overflow: hidden;
+    position: relative;
 }
-
-.pt-page {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	overflow: hidden;
-	backface-visibility: hidden;
-	transform: translate3d(0, 0, 0);
-}
-
-/* animation sets */
 
 /* move from / to  */
 
